--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/k_word_white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="k_word_white.png" type="image/x-icon">
 </head>
 <body>
     <div id="wrapper">
@@ -13,7 +13,7 @@
 
             <div class="navbar">
                 <div class="navlogo">
-                    <img src="/k_word_black.png" alt="Nav-Logo" class="logo">
+                    <img src="k_word_black.png" alt="Nav-Logo" class="logo">
                     <div class="logotext">unal Rana</div>
                 </div>
                 <div class="navitems">
@@ -50,7 +50,7 @@
                         <img src="images/userAsset/plus.png" alt="">
                     </div>
                     <div class="userimage">
-                        <img src="/kunal_img.jpeg" alt="">
+                        <img src="kunal_img.jpeg" alt="">
                     </div>
                 </div>
                 <div class="absolute fadedtext">Kunal Rana</div>
